tests/effects-corpus/corpus/reject/r_handler_installation_order.pdx
// Handler installation order violation
module HandlerOrder = structure {
  effect Io {
    op read : (u16) -> u8
  }

  let ordered : (unit) -> u8 !{} =
    fn (_ : unit) ->
      with io_handler handle Io {
        0
      }
}
